htdocs/GRpriodas.css
/* ... */
.button {
  text-align: -webkit-center;
  text-align: center;
  text-decoration: none;
}

.lang-select__button {
  margin: 4px;
  width: 220px;
  padding: 30px 20px;
  font-size: 30px;
  color: #000;
  border: 1px solid #daa520;
}


/****** POLAROID IMAGES ******/

.polaroid {
  position: absolute;
  height: auto;
  width: 15%;
  max-width: 250px;
  min-width: 180px;
  border: 20px solid #fff;
  border-bottom: 60px solid #fff;
  box-shadow: 0px 0px 10px #999;
  -webkit-backface-visibility: hidden;
  z-index: 3;
}

.polaroid--first {
  width: 18%;
  max-width: 280px;
  -moz-transform:rotate(10deg);  
  -webkit-transform:rotate(10deg);  
  -o-transform:rotate(10deg);  
  -ms-transform:rotate(10deg); 
  transform: rotate(10deg);
  bottom: -130px;
  left: -2%;
}

.polaroid--second {
  width: 16%;
  -moz-transform:rotate(2deg);  
  -webkit-transform:rotate(2deg);  
  -o-transform:rotate(2deg);  
  -ms-transform:rotate(2deg); 
  transform: rotate(2deg);
  bottom: -110px;
  left: 18%;
}

.polaroid--third {
  width: 18%;
  max-width: 280px;
  bottom: -100px;
  -moz-transform:rotate(357deg);  
  -webkit-transform:rotate(357deg);  
  -o-transform:rotate(357deg);  
  -ms-transform:rotate(357deg); 
  transform: rotate(357deg);
  left: 37%;
}

.polaroid--fourth {
  bottom: -80px;
  -moz-transform:rotate(5deg);  
  -webkit-transform:rotate(5deg);  
  -o-transform:rotate(5deg);  
  -ms-transform:rotate(5deg); 
  transform: rotate(5deg);
  left: 54%;
}

.polaroid--fifth {
  width: 20%;
  max-width: 300px;
  bottom: -150px;
  -moz-transform:rotate(350deg);  
  -webkit-transform:rotate(350deg);  
  -o-transform:rotate(350deg);  
  -ms-transform:rotate(350deg); 
  transform: rotate(350deg);
  left: 69%;
  z-index: 2;
}

.polaroid--sixth {
  width: 17%;
  max-width: 250px;
  bottom: -160px;
  -moz-transform:rotate(5deg);  
  -webkit-transform:rotate(5deg);  
  -o-transform:rotate(5deg);  
  -ms-transform:rotate(5deg); 
  transform: rotate(5deg);
  left: 90%;
  z-index: 1;
}

/* JAVASCRIPT */

.and--narrow {
  margin-right: 0.15em;
}

.header--shrink .and--narrow {
  margin-left: 0.15em;
}

.hide {
  display: none;
}

.show {
  display: block;
}

/**** MEDIA QUERIES ****/

@media screen and (max-width: 420px) {
  
  main {
    width: 90%;
    margin-top: 200px;
    font-size: 1.1em;
  }
  
  .container--goldborder {
    margin: 10px;
    border-width: 2px;
  }
  
  .header {
    top: 50px;
  }
  
  .header--shrink {
    top: 0;
  }
  
  h1 {
    font-size: 2em;
  }
  
  .and--narrow {
    margin-left: 0.1em;
  }
  
  .lang-select__button {
    padding: 20px 5px;
  }
  
  .lang-select__container:hover {
    margin: 54px 57px 0 57px;
  }
  
  .lang-select {
    margin-bottom: 160px;
  }
  
  .footer__container {
    display: none;
  }
  
  .signature {
    text-align: center;
    margin: 40px auto 0;
  }
  
}

@media screen and (max-width: 600px) {
    
  .lang-select {
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    -ms-flex-direction: column;	
    flex-direction: column;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -ms-box-orient: vertical;
    box-orient: vertical;
  }
}

@media screen and (max-width: 960px) {
  
  .container--goldborder {
    padding-bottom: 200px;
  }
  
  .header--shrink > h1 {
    margin-left: auto;
    margin-right: auto;
}
  
  .menuicon {
    display: block;
  }
  
  .header {
    overflow: visible;
  }
  
  .header .h1--small {
    margin-left: 60px;
  }
  
  .header__nav {
    position: relative;
    display: none;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    -ms-flex-direction: column;	
    flex-direction: column;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -ms-box-orient: vertical;
    box-orient: vertical;
    width: 100%;
    min-width: 100%;
    margin: 0;
    box-shadow: 0px 5px 8px 0px #ccc;
    background: #fff;
    z-index: 1020;
  }
  
  .header--shrink .header__nav {
    position: fixed;
    z-index: 1020;
    top: 63px;
    left: -40px;
    width: 100%;
  }
  
  .header__nav > a {
    display: block;
    color: #000;
    padding: 20px;
    margin-top: 0;
    border-left: 10px solid #fff;
  }
  
  a.header__nav__item--current {
    border-bottom: 0;
    border-left: 10px solid #c2dbd7;
  }

  .header__nav a:hover {
    border-bottom: 0;
    border-left: 20px solid #c2dbd7;
  }
  
}

@media screen and (min-width: 961px) {
  
  .header__nav {
    display: -webkit-box!important;      /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box!important;         /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox!important;      /* TWEENER - IE 10 */
    display: -webkit-flex!important;     /* NEW - Chrome */
    display: flex!important;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  }
  
@media screen and (min-width: 1800px) {
  
  .container--goldborder {
    padding-bottom: 60px;
  }
  
}

